Bug 1818836 - Fix a null pointer crash in DocAccessible.cpp r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D176165